--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,14 @@
     }
 }
 
+.noto-serif {
+    font-family: "Noto Serif", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+}
+
 /* Fills all the space between header & footer */
 body {
     display: flex;
@@ -26,13 +34,12 @@ main {
 :root {
     --bs-font-sans-serif: "Open Sans", sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --bs-body-color: rgb(36, 59, 94);
-    --bs-secondary-bg-subtle: rgb(237, 246, 252);
+    --bs-secondary-bg-subtle: rgb(248, 248, 248);
     --bs-primary-bg-subtle: rgb(9, 87, 151);
 }
 
 .navbar {
     box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
-
 }
 
 .navbar-brand {
@@ -63,12 +70,13 @@ a {
 }
 
 b {
-    font-weight: 600;
+    font-weight: 625;
+    font-size: 18px;
 }
 
 .search-container {
-    border-bottom-color: --bs-primary-bg-subtle !important;
-    border-bottom: 12px;
+    border-bottom-color: rgb(150, 93, 162) !important;
+    border-bottom: 6px;
     border-bottom-style: solid;
     box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
 }
@@ -78,14 +86,15 @@ b {
 }
 
 #contentDiv {
-    font-size: 18px;
+    font-size: 17.5px;
+    font-weight: 435;
 }
 
 .result-div {
     box-shadow: 0 0 1px rgba(0, 0, 0, .08), 0 1px 2px rgba(0, 0, 0, .24);
     padding: 10px;
-    font-size: 18px;
-    border-left: 5px solid rgb(36, 59, 94);
+    font-size: 17.5px;
+    border-left: 2px solid rgb(36, 59, 94);
     color: black;
 }
 
@@ -95,26 +104,8 @@ b {
     /*width: auto;*/
 }
 
-.references-u {
-    color: black !important;
-    text-decoration: underline;
-    text-decoration-style: solid;
-    text-decoration-thickness: 2px;
-    cursor: help;
-}
-
 .sources-link {
     color: var(--bs-body-color) !important;
-}
-
-.derivates-link {
-    color: var(--bs-body-color) !important;
-    text-decoration: none !important;
-}
-
-.derivates-link:hover {
-    background-color: WhiteSmoke;
-    border-radius: 5px;
 }
 
 .translation-td {
@@ -122,10 +113,14 @@ b {
     padding-right: 30px !important;
     padding-top: 2px !important;
     padding-bottom: 2px !important;
+    font-style: italic;
 }
 
-.references-td {
-    font-weight: bold;
+.references-u {
+    color: black !important;
+    text-decoration: underline;
+    text-decoration-style: solid;
+    text-decoration-thickness: 2.3px;
 }
 
 .footer-seperator {
