--- a/assets/style.css
+++ b/assets/style.css
@@ -114,6 +114,7 @@ b {
     padding-top: 2px !important;
     padding-bottom: 2px !important;
     font-style: italic;
+    word-break: break-word;
 }
 
 .references-u,
